--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-jscs": "^4.0.0"
+    "gulp-jscs": "^4.0.0",
+    "gulp-mocha": "^3.0.1",
+    "should": "^11.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
